add (feature/maven): add maven compile